# test_rtt_nrf52832

./: Cargo.toml  README.md  segger.gdb
.cargo/: config
src/: main.rs
